[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/UI_Square.png" type="Texture" id=1]
[ext_resource path="res://UI/Crosshair.png" type="Texture" id=2]
[ext_resource path="res://Script/UI.gd" type="Script" id=3]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crosshair" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 2 )

[node name="Health_bar" type="TextureProgress" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 17.0
margin_top = -57.0
margin_right = 189.0
margin_bottom = -17.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 1 )
tint_under = Color( 0.152941, 0.152941, 0.152941, 1 )
tint_progress = Color( 0.780392, 0.0352941, 0.0352941, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ammo_text" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 19.0
margin_top = -148.749
margin_right = 352.0
margin_bottom = -63.7491
text = "oui bonsoir"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score_text" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 19.0
margin_top = -249.448
margin_right = 352.0
margin_bottom = -164.448
text = "oui bonsoir"
__meta__ = {
"_edit_use_anchors_": false
}
